# shiny-happiness

./: .gitignore  01-text-generation.ipynb  02-multimodal.ipynb  03-structured-outputs.ipynb  04-tools.ipynb  05-mcp.ipynb  06-reasoning-models.ipynb  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  main.py  mcp_agent.py  mcp_weather.py  pyproject.toml  requirements.txt
